test/test-files/analyzer/generics/error-generic-type-check/exception.out
Semantic error in : ./test-files/analyzer/generics/error-generic-type-check/source.spice:4:18:
Types of printf call not matching: Template string expects int, byte or bool, but got string

4  printf("%d", g);
                ^